# Autorun-ng

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-validate.yml  docs.yml  download.yml
apps/autorun-egui/: Cargo.toml  README.md
apps/autorun-egui/src/backend/: attach.rs  exec.rs  mod.rs
apps/autorun-egui/src/frontend/: commands.rs  mod.rs
apps/autorun-ui/: Cargo.toml  README.md
apps/autorun-ui/src/backend/: exec.rs
apps/autorun-ui/src/frontend/: mod.rs
autorun/: Cargo.toml  build.rs
autorun-core/: Cargo.toml  README.md
autorun-core/src/: lib.rs  plugins.rs  settings.rs
autorun-env/: Cargo.toml  fields.lua
autorun-env/src/: env.rs  functions.rs  lib.rs  lua.rs  state.rs
autorun-env/src/env/: global.rs
autorun-env/src/functions/: include.rs  mkdir.rs  print.rs  read.rs  require.rs  write.rs  write_async.rs
autorun-env/src/lua/: include.lua  require.lua
autorun-interfaces/src/: engine_client.rs  lib.rs  lua.rs  net.rs  util.rs  vgui.rs
autorun-ipc/: Cargo.toml  README.md
autorun-ipc/src/: client.rs  lib.rs  message.rs  messenger.rs  server.rs
autorun-lib/: Cargo.toml  README.md  build.rs
autorun-lib/src/: events.rs  exports.rs  hooks.rs  lib.rs  lua.rs  lua_queue.rs  menu.rs  tier0.rs  util.rs
autorun-lib/src/events/: hook.rs  init.rs
autorun-lib/src/hooks/: load_buffer.rs  paint_traverse.rs  the_fn.rs
autorun-lib/src/lua/: interface.rs  lua.rs
autorun-lib/src/server/: commands.rs  mod.rs
autorun-lib/src/server/commands/: execute.rs  print.rs  set_workspace_path.rs
autorun-log/src/: lib.rs
autorun-lua/: Cargo.toml  README.md
autorun-lua/examples/: basic.rs
autorun-lua/src/: interface.rs  lib.rs  lua.rs  registry.rs  types.rs  value.rs
autorun-scan/: Cargo.toml  README.md
autorun-scan/src/: lib.rs
autorun-scan/src/raw/: linux.rs  windows.rs
autorun-steam/: Cargo.toml  README.md
autorun-steam/src/: lib.rs  vdf.rs
autorun-steam/src/gmod/: mod.rs
autorun-steam/src/gmod/raw/: linux.rs  windows.rs
autorun-steam/src/locate/: mod.rs
autorun-types/src/: lib.rs
autorun-ui/: Cargo.toml
autorun-ui/src/: main.rs  util.rs
autorun-ui/src/backend/: attach.rs  exec.rs  mod.rs
autorun-ui/src/frontend/: commands.rs  mod.rs
autorun/src/: main.rs
autorun/src/backend/: attach.rs  error.rs  injector.rs  mod.rs
autorun/src/backend/old/: hooks.rs  inject.rs
autorun/src/frontend/: error.rs  mod.rs
autorun_ipc/: Cargo.toml
autorun_lib/: Cargo.toml
autorun_lib/src/: lib.rs
docs/: .gitignore  README.md  astro.config.mjs  package.json
docs/src/components/: RealmBadge.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: your-first-plugin.mdx
docs/src/content/docs/guides/lua-plugins/: your-first-plugin.mdx  your-second-plugin.mdx
docs/src/content/docs/guides/native-plugins/: your-first-native-plugin.mdx
docs/src/content/docs/reference/: developer-requirements.mdx  events.mdx  file-structure.mdx  lua-api.mdx  the-environment.mdx  what-is-autorun.mdx
docs/src/content/docs/reference/developer/: requirements.mdx
docs/src/content/docs/reference/getting-started/: requirements.mdx  the-environment.mdx
docs/src/content/docs/reference/lua-api/: classes.mdx  events.mdx  namespaces.mdx
docs/src/content/docs/reference/misc/: file-structure.mdx
docs/src/utils/: api-formatter.ts
injector/: Cargo.toml  README.md
injector/src/: lib.rs
injector/src/win/: mod.rs
locator/: Cargo.toml
locator/src/: lib.rs  vdf.rs  windows.rs
locator/src/raw/: linux.rs  windows.rs
plugins/greeter/: plugin.toml
plugins/lua-dumper/: README.md
plugins/lua-dumper/src/client/: init.lua
plugins/std/: plugin.toml
plugins/std/src/client/: init.lua
plugins/std/src/menu/: init.lua
plugins/std/src/shared/: builtins.lua  color.lua  event.lua  init.lua  protections.lua  remote.lua  require.lua
release/autorun/plugins/greeter/: README.md
release/autorun/plugins/greeter/src/: menu.lua
release/autorun/plugins/lua_dumper/: plugin.toml
release/autorun/plugins/lua_dumper/src/: hook.lua  init.lua  test.lua
release/autorun/plugins/lua_dumper/src/client/: init.lua
release/autorun/plugins/test/: plugin.toml
release/autorun/plugins/test/src/: test.c
services/autorun-lib/: Cargo.toml
services/autorun-lib/src/: events.rs  lib.rs  lua_queue.rs  menu.rs
services/autorun-lib/src/events/: client_init.rs  hook.rs  init.rs  menu.rs  menu_init.rs
services/autorun-lib/src/hooks/: load_buffer.rs  paint_traverse.rs  the_fn.rs
services/autorun-lib/src/server/: commands.rs  mod.rs
services/autorun-lib/src/server/commands/: execute.rs  set_workspace_path.rs
