[workspace]
members = [
    "autorun-ui",
    "autorun-lib",
    "autorun-ipc",
    "autorun-log",
    "autorun-types",
    "autorun-core",
    "autorun-steam",
    "autorun-lua",
    "autorun-interfaces",
    "autorun-scan",
    "autorun-env"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
description = "..."

[workspace.dependencies]
anyhow = "1.0.99"
libloading = "0.8.8"
thiserror = "2.0.16"
cap-std = "3.4.4"
serde = { version = "1.0.219", features = ["derive"] }
