[workspace]
edition = "2024"
members = [
    "packages/*",
    "apps/*",
    "services/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
description = "..."

[workspace.dependencies]
anyhow = { version = "1.0.99" }
libloading = { version = "0.8.8" }
thiserror = { version = "2.0.16" }
cap-std = { version = "3.4.4" }
serde = { version = "1.0.219", features = ["derive"] }
interprocess = "2.2.3"
nanoserde = { version = "0.2.1", default-features = false, features = ["binary"] }
