[workspace]
members = [
    "packages/*",
    "apps/*",
    "services/*"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
description = "Autorun is an all-in-one game launcher and modification framework currently for Garry's Mod."
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.99" }
libloading = { version = "0.8.8" }
thiserror = { version = "2.0.16" }
cap-std = { version = "3.4.4" }
serde = { version = "1.0.219", features = ["derive"] }
interprocess = "2.2.3"
nanoserde = { version = "0.2.1", default-features = false, features = ["binary"] }
retour = { git = "https://github.com/thevurv/retour-rs" }

autorun-lua = { path = "packages/autorun-lua" }
autorun-ipc = { path = "packages/autorun-ipc" }
autorun-types = { path = "packages/autorun-types" }
autorun-log = { path = "packages/autorun-log" }
autorun-interfaces = { path = "packages/autorun-interfaces" }
autorun-scan = { path = "packages/autorun-scan" }
autorun-core = { path = "packages/autorun-core" }
autorun-env = { path = "packages/autorun-env" }
autorun-fs = { path = "packages/autorun-fs" }
autorun-steam = { path = "packages/autorun-steam" }
autorun-jit = { path = "packages/autorun-jit" }
autorun-luajit = { path = "packages/autorun-luajit" }
autorun-plugin-api = { path = "packages/autorun-plugin-api" }
