[package]
name = "autorun-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# To redirect stdout to the terminal
# shh = "1.0.1"

# For robust error handling
anyhow = { workspace = true }
ctor = "0.5.0"
interprocess = "2.2.3"

# Getting dll exports
libloading = "0.8.8"
nanoserde = { version = "0.2.1", features = ["binary"] }

# Detours
retour = { git = "https://github.com/jon-zu/retour-rs" }

# IPC communication
autorun-ipc = { path = "../autorun-ipc" }
