[package]
name = "autorun-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }
ctor = "0.5.0"
interprocess = "2.2.3"
nanoserde = { version = "0.2.1", features = ["binary"] }
retour = { git = "https://github.com/thevurv/retour-rs" }

# IPC communication
autorun-ipc = { path = "../autorun-ipc" }
autorun-types = { path = "../autorun-types" }
autorun-log = { path = "../autorun-log" }
autorun-lua = { path = "../autorun-lua" }
autorun-interfaces = { path = "../autorun-interfaces" }
autorun-scan = { path = "../autorun-scan" }
autorun-core = { path = "../autorun-core" }
autorun-env = { path = "../autorun-env" }
