[package]
name = "autorun-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# For the gui itself
eframe = "0.28.0"

# To redirect stdout to the terminal
shh = "1.0.1"

# For robust error handling
anyhow = { workspace = true }

# Getting dll exports
libloading = "0.7.3"

# Self explanatory
# retour = { version = "0.3", default-features = false }

locator = { path = "../locator" }
interprocess = "2.2.3"
nanoserde = { version = "0.2.1", features = ["binary"] }

# For loading PNG icon
image = "0.24"

# IPC communication
autorun-ipc = { path = "../autorun-ipc" }
