[package]
name = "autorun"
version = "0.1.0"
edition = "2021"

[dependencies]
# For the gui itself
eframe = "0.19.0"

# To redirect stdout to the terminal
shh = "1.0.1"

# For robust error handling
thiserror = { workspace = true }

# Getting dll exports
libloading = "0.7.3"

# Self explanatory
detour = { git = "https://github.com/lostinspiration/detour-rs.git", default-features = false }

locator = { path = "../locator" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "libloaderapi", "memoryapi", "processthreadsapi", "synchapi"] }
