[package]
name = "autorun"
version = "0.1.0"
edition = "2021"

[dependencies]
# For the gui itself
eframe = "0.19.0"

# To redirect stdout to the terminal
shh = "1.0.1"

# For robust error handling
anyhow = { workspace = true }

# Getting dll exports
libloading = "0.7.3"

# Self explanatory
detour = { git = "https://github.com/lostinspiration/detour-rs.git", default-features = false }

locator = { path = "../locator" }
