[package]
name = "autorun_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# To redirect stdout to the terminal
shh = "1.0.1"

# For robust error handling
thiserror = { workspace = true }

# Getting dll exports
libloading = "0.7.3"

# Self explanatory
detour = { git = "https://github.com/lostinspiration/detour-rs.git", default-features = false }