[package]
name = "autorun_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# To redirect stdout to the terminal
# shh = "1.0.1"

# For robust error handling
anyhow = { workspace = true }
ctor = "0.5.0"
interprocess = "2.2.3"

# Getting dll exports
libloading = "0.7.3"

# Self explanatory
# detour = { git = "https://github.com/lostinspiration/detour-rs.git", default-features = false }
