[package]
name = "injector"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
# winapi = "0.39"
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_Storage_FileSystem"] }