[package]
name = "autorun-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }
retour = { git = "https://github.com/thevurv/retour-rs" }

autorun-ipc = { path = "../../packages/autorun-ipc" }
autorun-types = { path = "../../packages/autorun-types" }
autorun-log = { path = "../../packages/autorun-log" }
autorun-lua = { path = "../../packages/autorun-lua" }
autorun-interfaces = { path = "../../packages/autorun-interfaces" }
autorun-scan = { path = "../../packages/autorun-scan" }
autorun-core = { path = "../../packages/autorun-core" }
autorun-env = { path = "../../packages/autorun-env" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
ctor = { version = "0.5.0", default-features = false }
