[package]
name = "autorun-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }
retour = { workspace = true }

autorun-ipc = { workspace = true }
autorun-types = { workspace = true }
autorun-log = { workspace = true }
autorun-lua = { workspace = true }
autorun-interfaces = { workspace = true }
autorun-scan = { workspace = true }
autorun-core = { workspace = true }
autorun-env = { workspace = true }
autorun-fs = { workspace = true }

# Exported plugin api
autorun-plugin-api = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
ctor = { version = "0.5.0", default-features = false }
